2015-04-10 Ben Shi <powerstudio1st AT 163 DOT com>
	* debugger/mcs51/configure:
	* debugger/mcs51/Makefile.in:
	* debugger/mcs51/configure.in:
	* sim/ucsim/st7.src/Makefile.in:
	* sim/ucsim/z80.src/Makefile.in:
	* sim/ucsim/stm8.src/Makefile.in:
	* sim/ucsim/xa.src/Makefile.in:
	* sim/ucsim/s51.src/Makefile.in:
	* sim/ucsim/avr.src/Makefile.in:
	* sim/ucsim/hc08.src/Makefile.in:
	* sim/ucsim/configure:
	* sim/ucsim/Makefile.in:
	* sim/ucsim/configure.in:
	  Support --program-prefix and --program-suffix.

2015-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/ctype.h,
	  device/lib/isblank.c:
	  Faster isblank().
	* device/include/stdlib.h,
	  device/lib/atoi.c,
	  device/lib/atol.c,
	  device/lib/atoll.c,
	  device/lib/incl.mk,
	  device/lib/make51lib.bat,
	  support/regression/tests/ato.c:
	  Faster and shorter atoi(), atol(), implemented atoll().
	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCsymt.h,
	  src/port.h,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/*/main.c,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc,
	  support/regression/tests/z88dk.c:
	  Support for __z88dk_fastcall calling convention.
	* src/stm8/peeph.def:
	  Use relative jump on false instruction for optimizing jumps over 1-byte opcodes.

2015-04-06 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/bug-2368.c:
	  Try to fix the failure in "make test-host" on sparc64-solaris.

2015-04-03 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCerr.c:
	* src/SDCCerr.h:
	* src/SDCCast.c:
	  Add a warning for inline __naked functions.

2015-04-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCutils.h:
	* src/SDCCutils.c:
	* src/SDCCmain.c:
	  Support --program-prefix and --program-suffix while calling assembler and linker.
	* src/z80/gen.c:
	* src/z80/mapping.i:
	* src/SDCCasm.c:
	  Add new "globalfunctionlabel".
	* sdas/linksrc/Makefile.in:
	  Fix a spot in 'make install'.

2015-04-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCnaddr.hpp,
	  src/SDCCnaddr.cc: